[project]
name = "cx-data-mart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gustavo Camargo", email = "" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
# Ruff config

[tool.ruff]
exclude = ["tests"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    "D", # pycodestyle
    "E",
    "W",
    # mccabe (code complexity)
#    "C90",
    # Pyflakes
    "F",
    # pep8-naming,
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Others
    "YTT",
    "ANN",
    "S", # bandit
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20", # print finder
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
#    "PTH",  # change from strings to path obj
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF"
]
ignore = ["ANN202",
    "S101",
    "RET504",
    "PD901",
    "PLR0912",
    "PLR0913",
    "ISC001", # conflicts with COM812
    "FURB101", # not complain with open
    "PLW1514", # not complain with open
    "PTH123", # not complain with open
    "TRY003",
    "B023", # affects pandas lambda apply
    "PD015", # let's use pd.merge
    "COM812", # conflicts stuff
    "FIX002", # asks to solve TODOs
    "TD003", # asks for an issue link for TODOs
    "ANN101", # depracated
    "D107",
    "D104",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["PLR2004", "ANN201", "ANN001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "mkdocs-macros-plugin>=1.4.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
