[project]
name = "cx-data-mart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gustavo Camargo", email = "" }
]
requires-python = ">=3.13"
dependencies = [
    "bayer-api",
    "bayer-vault",
    "beautifulsoup4>=4.14.2",
    "chardet>=5.2.0",
    "fastparquet>=2024.11.0",
    "google-cloud-bigquery>=3.38.0",
    "klib>=1.3.2",
    "msal>=1.34.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-gbq>=0.29.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.3",
    "pyjanitor>=0.31.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-bayerauth",
    "tcc-phenology",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
# Ruff config

[tool.ruff]
output-format = "concise"
exclude = ["tests"]
line-length = 88
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    "D", # pycodestyle
    "E",
    "W",
    # mccabe (code complexity)
#    "C90",
    # Pyflakes
    "F",
    # pep8-naming,
    "N",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Others
    "YTT",
    "ANN",
    "S", # bandit
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20", # print finder
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
#    "PTH",  # change from strings to path obj
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF"
]
ignore = [
#  "ANN202",
    "S101",
    "RET504",
    "PD901",
    "PLR0912",
    "PLR0913",
    "ISC001", # conflicts with COM812
    "FURB101", # not complain with open
    "PLW1514", # not complain with open
    "PTH123", # not complain with open
    "TRY003",
    "B023", # affects pandas lambda apply
    "PD015", # let's use pd.merge
    "COM812", # conflicts stuff
    "FIX002", # asks to solve TODOs
    "TD003", # asks for an issue link for TODOs
#    "ANN101", # depracated
    "D107",
    "D104",
    "T201",
  "PLR0914",
  "D103",
#  "ANN201",
#  "ANN001",
  "RUF003",
  "D205",
  "D415",
  "E501",
  "FBT002",
  "DTZ007",
  "SIM103",
  "PIE810",
  "S112",
  "PLR2004",
  "S110",
  "FURB118"

]
fixable = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["PLR2004", "ANN201", "ANN001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv.sources]
bayer-api = { git = "ssh://git@github.com/bayer-int/bayer-api.git" }
bayer-vault = { git = "ssh://git@github.com/bayer-int/location360-all-vault-python-gc.git", rev = "main" }
requests-bayerauth = { git = "ssh://git@github.com/bayer-int/location360-all-requests-bayerauth.git", rev = "main" }
tcc-phenology = { git = "ssh://git@github.com/bayer-int/md-phenology-models.git", rev = "master" }

[dependency-groups]
dev = [
    "mkdocs-macros-plugin>=1.4.1",
    "mkdocs-material>=9.6.22",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
